try to make forbidden APIs happy